# Nova

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  TODO.txt  bldr.lua  build.3rdparty.jsonc  build.bat  build.jsonc  dependencies.bldr.lua  setup.bat
assets/shaders/: triangle.frag  triangle.vert
dependencies/: CMakeLists.txt
example/: BoxOverlayTest.cpp  HelloCompute.cpp  HelloMesh.cpp  HelloTriangle.cpp  HelloTriangleRT.cpp  JobSystemTest.cpp  MultiPresentTest.cpp  PresentTest.cpp  PresentTest2.cpp  main.cpp
examples/: Allocator.cpp  Blur.cpp  Blur.slang  CommandLists.cpp  Compute.cpp  Compute.slang  CopyTest.cpp  DrawTest.cpp  ImGui.cpp  Input.cpp  MinContext.cpp  MultiPresent.cpp  MultiView.cpp  Quads.cpp  Quads.slang  RayTracing.cpp  RayTracing.slang  RoundRect.cpp  Triangle.cpp  Triangle.slang  TriangleExtended.cpp  TriangleExtended.slang  TriangleMeshShader.cpp  TriangleMeshShader.slang  TriangleRayTrace.cpp  TriangleRayTrace.slang  Wooting.cpp  example_AllocatorTest.cpp  example_AppTest.cpp  example_Blur.cpp  example_Blur.slang  example_CommandListTest.cpp  example_Compute.cpp  example_Compute.slang  example_Copy.cpp  example_Draw.cpp  example_ImGui.cpp  example_InputTest.cpp  example_Lang.cpp  example_Main.cpp  (+21 more)
examples/main/: Main.cpp  Main.hpp  example_Main.cpp  example_Main.hpp
src/: main.cpp
src/Core/: Core.hpp  JobSystem.hpp  Ref.hpp  Vendor.cpp  Vendor.hpp
src/ImGui/: ImGuiBackend.cpp  ImGuiBackend.h
src/Nova/: Nova_Buffer.cpp  Nova_Commands.cpp  Nova_Context.cpp  Nova_Core.hpp  Nova_Fence.cpp  Nova_Image.cpp  Nova_Jobs.hpp  Nova_Math.hpp  Nova_RHI.hpp  Nova_Ref.hpp  Nova_Shader.cpp  Nova_Swapchain.cpp
src/Pyrite/: Pyrite_Core.hpp  Pyrite_ImGui.cpp  Pyrite_ImGui.hpp  Pyrite_Renderer.cpp
src/Renderer/: Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp
src/VulkanBackend/: VulkanBackend.cpp  VulkanBackend.hpp  VulkanBuffers.cpp  VulkanCommands.cpp  VulkanImages.cpp  VulkanSemaphores.cpp  VulkanShaders.cpp  VulkanSwapchain.cpp
src/axiom/: axiom_Renderer.hpp
src/nova/asset/: nova_EditImage.cpp  nova_EditImage.hpp  nova_Image.hpp  nova_Image2D.cpp  nova_Image2D.hpp  nova_ImageAccess.cpp  nova_ImageAccessor.cpp  nova_ImageAccessor.hpp  nova_ImageLoad.cpp  nova_ImageLoading.cpp  nova_ImageProcess.cpp
src/nova/core/: Base64.hpp  Core.hpp  Files.hpp  JobSystem.hpp  Json.cpp  Json.hpp  JsonWriter.hpp  nova_Allocation.cpp  nova_Allocation.hpp  nova_Array.hpp  nova_Base64.cpp  nova_Base64.hpp  nova_Containers.hpp  nova_Conversion.hpp  nova_Core.hpp  nova_Debug.hpp  nova_Env.hpp  nova_Files.cpp  nova_Files.hpp  nova_Flags.hpp  nova_Guards.hpp  nova_Hash.cpp  nova_Hash.hpp  nova_ImplHandle.hpp  nova_JobSystem.hpp  nova_Jobs.hpp  nova_Jobs_Old.hpp  nova_JsonWriter.hpp  nova_Math.cpp  nova_Math.hpp  nova_Ref.hpp  nova_Registry.hpp  nova_Stack.cpp  nova_Stack.hpp  nova_Strings.hpp  nova_SubAllocation.hpp  nova_Timer.cpp  nova_Timer.hpp  nova_ToString.hpp  nova_Vendor.cpp  (+1 more)
src/nova/core/win32/: Win32.cpp  Win32.hpp  Win32Files.cpp  nova_FilesWin32.cpp  nova_TimerWin32.cpp  nova_Win32.cpp  nova_Win32.hpp  nova_Win32Alloc.cpp  nova_Win32Core.hpp  nova_Win32Include.hpp  nova_Win32Timer.cpp  nova_Win32Utility.cpp  nova_Win32Utility.hpp
src/nova/database/: Sqlite.cpp  Sqlite.hpp
src/nova/db/: nova_Sqlite.cpp  nova_Sqlite.hpp
src/nova/filesystem/: VirtualFileSystem.cpp  VirtualFileSystem.hpp
src/nova/gpu/: RHI.hpp
src/nova/gpu/slang/: Compiler.cpp  Compiler.hpp  Shared.hpp  Shared.slang
src/nova/gpu/vulkan/: VulkanAccelerationStructures.cpp  VulkanBuffer.cpp  VulkanCommands.cpp  VulkanCompute.cpp  VulkanContext.cpp  VulkanDescriptors.cpp  VulkanDrawing.cpp  VulkanEnums.cpp  VulkanFence.cpp  VulkanFunctions.cpp  VulkanImage.cpp  VulkanPipelines.cpp  VulkanQueue.cpp  VulkanRHI.hpp  VulkanRayTracing.cpp  VulkanShaders.cpp  VulkanStructureTypes.hpp  VulkanSwapchains.cpp  VulkanTransferManager.cpp
src/nova/gui/: Draw2D.cpp  Draw2D.hpp  Draw2DRect.slang  Draw2DShared.slang  ImGui.cpp  ImGui.hpp  ImGui.slang
src/nova/image/: Image.hpp  ImageAccess.cpp  ImageLoad.cpp  ImageProcess.cpp
src/nova/imdraw/: nova_ImDraw2D.cpp  nova_ImDraw2D.hpp
src/nova/imgui/: nova_ImGui.cpp  nova_ImGui.hpp
src/nova/imgui/vulkan/: nova_VulkanImGui.cpp  nova_VulkanImGui.hpp
src/nova/lang/: nova_Compiler.cpp  nova_Lang.cpp  nova_Lang.hpp  nova_Parser.cpp  nova_Resolver.cpp  nova_Scanner.cpp  nova_ShaderLang.hpp.disabled
src/nova/lang/backends/: nova_Glsl.cpp  nova_Glsl.hpp  nova_VulkanGlslBackend.cpp  nova_VulkanGlslBackend.hpp
src/nova/rhi/: nova_Buffer.cpp  nova_CommandState.cpp  nova_Commands.cpp  nova_Context.cpp  nova_Descriptors.cpp  nova_Fence.cpp  nova_Image.cpp  nova_Pipelines.cpp  nova_RHI.cpp  nova_RHI.hpp  nova_RHI_Handle.hpp  nova_RHI_Impl.hpp  nova_RayTracing.cpp  nova_ResourceTracker.cpp  nova_Sampler.cpp  nova_Shader.cpp  nova_Swapchain.cpp  nova_Texture.cpp
src/nova/rhi-shader-gen/: nova_ShaderGen.cpp
src/nova/rhi/slang/: nova_Slang.hpp  nova_Slang.slang  nova_SlangCompiler.cpp  nova_SlangCompiler.hpp
src/nova/rhi/vulkan/: nova_Commands.cpp  nova_Swapchain.cpp  nova_VulkanAccelerationStructures.cpp  nova_VulkanBuffer.cpp  nova_VulkanCommands.cpp  nova_VulkanCompute.cpp  nova_VulkanContext.cpp  nova_VulkanContext.hpp  nova_VulkanDescriptors.cpp  nova_VulkanDrawing.cpp  nova_VulkanEnums.cpp  nova_VulkanRHI.hpp  (+15 more)
src/nova/sqlite/: nova_Sqlite.cpp  nova_Sqlite.hpp
src/nova/ui/: nova_Draw2D.cpp  nova_Draw2D.hpp  nova_Draw2D.slang  nova_Draw2DRect.slang  nova_Draw2DShared.slang  nova_ImDraw2D.cpp  nova_ImDraw2D.hpp  nova_ImGui.cpp  nova_ImGui.hpp  nova_ImGui.slang
src/nova/vfs/: nova_VirtualFilesystem.cpp  nova_VirtualFilesystem.hpp
src/nova/window/: Window.hpp  nova_Events.cpp  nova_Window.cpp  nova_Window.hpp
src/pyrite/: pyrite_Core.hpp  pyrite_Mesh.cpp  pyrite_Mesh.hpp  pyrite_Renderer.cpp  pyrite_Renderer.hpp
staging/core/: nova_Registry.hpp
staging/lang/: nova_Lang.cpp  nova_Lang.hpp  nova_Parser.cpp
staging/lang/backends/: nova_ShaderGen.hpp  nova_VulkanGlslBackend.cpp
staging/os/: nova_Window.cpp  nova_Window.hpp
(+48 files in other folders)
